--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@
 }
 @font-face {
     font-family: 'Rodin_light';
-    src: url('FOTRodin-Pro-L.otf') format('opentype');
+    src: url('../fot-rodin-pro-cufonfonts/FOTRodin-Pro-L.otf') format('opentype');
 }
 @font-face {
     font-family: 'Rodin_bold';
-    src: url('FOTRodin-Pro-DB.otf') format('opentype');
+    src: url('../fot-rodin-pro-cufonfonts/FOTRodin-Pro-DB.otf') format('opentype');
 
 }
 
@@ -19,6 +19,10 @@
    --dark-markers: #4d493e;
    --bg-color: #d1cdb7;
    --text-color:#454238;
+}
+
+body{
+    overflow: scroll;
 }
 
 *{
@@ -31,9 +35,10 @@
 .container{
     background-image: url(../imgs/NieR-HIGH-1440.png);
     display: grid;
+    overflow-x: scroll;
     width: 100vw;
     height: 100vh;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1.5fr 4fr;
     grid-template-rows: .8fr 5fr;
 }
 
@@ -47,7 +52,8 @@
     display: grid;
     grid-column: 2/3;
     grid-row: 1/2;
-    grid-template-rows: 1fr 4fr;
+    grid-template-rows: .7fr 2fr;
+    gap: 10px;
 }
 
 .header div{
@@ -55,11 +61,10 @@
 }
 
 .top_header{
-    
     grid-row: 1/2;
     display: flex;
     justify-content: space-between;
-    gap: 5rem;
+    gap: 4rem;
 }
 
 .top_header .left_side{
@@ -75,6 +80,8 @@
 .top_header .right_side{
     display: flex;
     align-items: center;
+    font-family: 'Rodin',sans-serif;
+    font-size: .9rem
 }
 
 .search_img{
@@ -109,25 +116,140 @@
 
 
 
+.bottom_header button{
+    border: none;
+    font-family: 'Rodin', sans-serif;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-left: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: var(--text-color);
+    background-color: var(--text-box);
+    z-index: 1;
+    position: relative;
+    transition-duration: .2s;
+    transition-property: color, background-color, box-shadow;
+}
+
+
+
+button::before{
+    content: '';
+    transition: all 0.2s;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+button::after{
+    content: '';
+    transition: all .2s;
+    transition-timing-function: ease-out;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    background-color: var(--dark-markers);
+    z-index: -1;
+}
+
+button:hover {
+    box-shadow: 0.2em 0.2em 0.1em 0 #bab5a1;
+    background-color: transparent;
+    color: #dcd8c0;
+  }
+
+button:hover::before{
+    top: -0.2rem;
+    bottom: -0.2rem;
+    border: solid var(--dark-markers);
+    border-width: 0.1rem 0;
+}
+
+button:hover::after{
+    background-color: var(--dark-markers);
+    opacity: 1;
+    color: var(--bg-color);
+    width: 100%;
+}
+
+
+
 /* sidebar */
 
-/* .sidebar div{
-    padding: 10px;
-} */
+
 .sidebar{
     grid-column: 1/2;
     grid-row: 1/-1;
+    display: grid;
+    grid-template-rows: .2fr 3fr;
+    gap: 30px;
+    margin-right: 20px;
 }
 
-li::before{
-    content: '';
-    position: absolute;
-    top: 25%;
-    left: 0.6em;
-    width: 1.1rem;
-    height: 1.1rem;
-    background-color: var(--text-color);
+.logo{
+    display: flex;
+    gap: 5px;
+    padding-left: 20px;
+    padding-top: 10px;
 }
+
+.yorha{
+    width: 70px;
+}
+
+h1{
+    letter-spacing: 0.5rem;
+    text-shadow: 0.3rem 0.3rem 0 var(--text-box) ;
+    font-family: 'Rodin_bold', sans-serif;
+    color: var(--text-color);
+    align-self: center;
+}
+
+.menu{
+    display: grid;
+    grid-template-rows: 17rem 10rem;
+    gap: 70px;
+    padding-left: 20px;
+}
+
+.border{
+    grid-column: 1/2;
+    display: flex;
+    justify-content: space-between;
+}
+
+.first_list{
+    grid-row: 1/2;
+    grid-template-columns:20px 1fr;
+    gap: 30px;
+    display: grid;
+}
+
+.second_list{
+    grid-row: 2/3;
+    grid-template-columns:20px 1fr;
+    gap: 30px;
+    display: grid;
+}
+
+
+.menu .big_border{
+    background-color: var(--text-box);
+    width: .7rem;
+}
+
+.menu .small_border{
+    background-color: var(--text-box);
+    width: .2rem;
+}
+
+
+
 
 li{
     position: relative;
@@ -135,80 +257,132 @@ li{
     font-family: 'Rodin',sans-serif;
     padding: 4px;
     padding-left: 2rem;
-    margin-top: 20px;
     background-color: var(--text-box);
     color: var(--text-color);
+    z-index: 1;
+    transition-duration: .2s;
+    transition-property: color, background-color, box-shadow;
 }
+
+li::before{
+    content: '';
+    transition: all 0.2s;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+li:nth-child(even){
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+li::after{
+    content: '';
+    transition: all .2s;
+    transition-timing-function: ease-out;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    background-color: var(--dark-markers);
+    z-index: -1;
+}
+
+li:hover {
+    box-shadow: 0.2em 0.2em 0.1em 0 #bab5a1;
+    background-color: transparent;
+    color: #dcd8c0;
+  }
+
+li:hover::before{
+    top: -0.2rem;
+    bottom: -0.2rem;
+    border: solid var(--dark-markers);
+    border-width: 0.1rem 0;
+}
+
+li:hover::after{
+    background-color: var(--dark-markers);
+    opacity: 1;
+    color: var(--bg-color);
+    width: 100%;
+}
+
 
 
 /* main container */
 
 .main_container{
     padding: 10px;
+    gap: 10px;
     grid-column: 2/-1;
     grid-row: 2/-1;
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 4fr 1.5fr;
+
 }
 
 .main_container .left_side{
     display: grid;
-    grid-template-rows: 30px 1fr;
-    padding: 10px;
+}
+
+.projects .title{
+    grid-column: 1/-1;
+    font-family: 'Rodin',sans-serif;
+    color: var(--bg-color);
+    background-color: var(--dark-markers);
+    padding-left: 10px;
 }
 
 
 .projects{
-    grid-column: 1/2; 
+    grid-column: 1/2;
+    background-color: var(--boxes-color); 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 10px;
-    padding: 10px;
+    grid-template-rows: 30px 1fr 1fr 1fr;
+    gap: 5px;
 }
 
 .projects .project_card{
-    background-color: var(--boxes-color);
+    background-color: var(--text-box);
     display: grid;
-    grid-template-columns: 20px 1fr;
-
+    margin: 10px;
 }
-.border{
-    grid-column: 1/2;
-    display: flex;
-    justify-content: space-between;
-}
-
-.big_border{
-    background-color: var(--dark-markers);
-    width: .7rem;
-}
-
-.small_border{
-    background-color: var(--dark-markers);
-    width: .2rem;
-}
-
 
 .main_container .right_side{
     display: grid;
-    grid-template-rows: 30px 1fr 30px 1fr;
+    grid-template-rows:1fr 1fr;
     gap: 10px;
-    padding: 10px;
+    padding-left: 10px;
 }
 
 .anouncement_card{
-    background-color: white;
-    grid-row: 2/3;
+    background-color: var(--boxes-color);
+    display: grid;
+    grid-template-rows: 30px 1fr 1fr 1fr;
+
+}
+
+.anouncement:nth-of-type(-n+2){
+    border-bottom: solid var(--text-box);
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .trending{
-    background-color: white;
-    grid-row: 4/5;
+    background-color: var(--boxes-color);
 
 }
 
 .right_side .title{
-
+    font-family: 'Rodin', sans-serif;
+    color: var(--bg-color);
+    background-color: var(--dark-markers);
+    padding-left: 10px;
 }
 
