--- a/css/style.css
+++ b/css/style.css
@@ -75,12 +75,32 @@ body{
 
 .left_side .search_bar{
     flex: 1;
+    border: none;
+    padding-top: .2em;
+    padding-bottom: .2em;
+    padding-right: .5em;
+    padding-left: .5em;
+    background-color: var(--boxes-color);
+    font-size: 1em;
+    font-family: 'Rodin',sans-serif;
+    color: var(--dark-markers);
+    outline: none;
 }
+
+[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 1em;
+    width: 1em;
+    background: url(../icons/window-close.svg) no-repeat 50% 50%;
+    background-size: 1.2em;
+  }
 
 .top_header .right_side{
     display: flex;
     align-items: center;
     font-family: 'Rodin',sans-serif;
+    color: var(--text-color);
     font-size: .9rem
 }
 
@@ -106,6 +126,8 @@ body{
 .bottom_header .left_side{
     display: flex;
     padding: 0;
+    font-family: 'Rodin',sans-serif;
+    color: var(--text-color);
 }
 
 
@@ -249,19 +271,20 @@ h1{
 }
 
 
-
-
 li{
     position: relative;
     list-style: none;
     font-family: 'Rodin',sans-serif;
     padding: 4px;
-    padding-left: 2rem;
+    padding-left: 1rem;
     background-color: var(--text-box);
     color: var(--text-color);
     z-index: 1;
     transition-duration: .2s;
     transition-property: color, background-color, box-shadow;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 li::before{
@@ -311,6 +334,17 @@ li:hover::after{
     color: var(--bg-color);
     width: 100%;
 }
+li:hover > .marker{
+    background-color: var(--bg-color);
+}
+
+li .marker{
+    content: '';
+    width: .8rem;
+    height: .8rem;
+    background-color: var(--dark-markers);
+}
+
 
 
 
@@ -345,13 +379,11 @@ li:hover::after{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 30px 1fr 1fr 1fr;
-    gap: 5px;
 }
 
 .projects .project_card{
     background-color: var(--text-box);
-    display: grid;
-    margin: 10px;
+    margin: 20px;
 }
 
 .main_container .right_side{
